--- a/equity/paper-engine-orders/pyproject.toml
+++ b/equity/paper-engine-orders/pyproject.toml
@@ -8,7 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.11,<4.0.0"
 dependencies = [
-    "alpaca-py (>=0.39.0,<0.40.0)"
+    "alpaca-py (>=0.39.0,<0.40.0)",
+    "psycopg2 (>=2.9.10,<3.0.0)"
 ]
 
 
