(fix) Fixes deployment.

--- a/equity/paper-engine-monitor/Dockerfile
+++ b/equity/paper-engine-monitor/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.10.5-alpine3.16
 
-LABEL maintainer="Tomas Juhos <tomas.juhos@2iqresearch.com>"
+LABEL maintainer="Tomas Juhos"
 USER root
 
 WORKDIR /project
@@ -24,4 +24,4 @@ RUN pip3 install .
 EXPOSE 9000
 
 ENTRYPOINT ["/usr/bin/dumb-init", "--"]
-CMD ["python", "-m", "paper_engine_portfolio"]
+CMD ["python", "-m", "paper_engine_monitor"]
