(fix) Minor fix in strategy main and dependencies update.

--- a/alpaca/paper-engine-strategy/pyproject.toml
+++ b/alpaca/paper-engine-strategy/pyproject.toml
@@ -8,7 +8,11 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "notebook (>=7.4.1,<8.0.0)"
+    "notebook (>=7.4.1,<8.0.0)",
+    "psycopg2 (>=2.9.10,<3.0.0)",
+    "pandas (>=2.2.3,<3.0.0)",
+    "hurst (>=0.0.5,<0.0.6)",
+    "pydantic (>=2.11.4,<3.0.0)"
 ]
 
 
