--- a/alpaca/paper-engine-strategy/pyproject.toml
+++ b/alpaca/paper-engine-strategy/pyproject.toml
@@ -6,13 +6,14 @@ authors = [
     {name = "tomas-juhos",email = "tomasdavidjuhos@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.11,<4.0.0"
 dependencies = [
     "notebook (>=7.4.1,<8.0.0)",
     "psycopg2 (>=2.9.10,<3.0.0)",
     "pandas (>=2.2.3,<3.0.0)",
     "hurst (>=0.0.5,<0.0.6)",
-    "pydantic (>=2.11.4,<3.0.0)"
+    "pydantic (>=2.11.4,<3.0.0)",
+    "alpaca-py (>=0.40.0,<0.41.0)"
 ]
 
 
