--- a/alpaca/paper-engine-strategy/Dockerfile
+++ b/alpaca/paper-engine-strategy/Dockerfile
@@ -10,6 +10,12 @@ COPY requirements.txt .
 # install dependencies
 RUN apk update
 RUN python -m pip install --no-cache-dir --upgrade pip \
+&& apk add --no-cache \
+        postgresql-dev \
+        gcc \
+        libc-dev \
+        make \
+        dumb-init \
     && pip3 install --no-cache-dir -r requirements.txt \
     && rm -rf /root/./.cache \
     && find . -type d -name __pycache__ -exec rm -r {} \+ \
