--- a/alpaca/paper-engine-monitor/pyproject.toml
+++ b/alpaca/paper-engine-monitor/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["tomas-juhos <tomasdavidjuhos@gmail.com>"]
 readme = "README.md"
-packages = [{include = "paper_engine_portfolio"}]
+packages = [{include = "paper_engine_monitor"}]
 
 [tool.poetry.dependencies]
 python = ">=3.11,<4.0.0"
