changed docker compose command structure in deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,6 @@ jobs:
           script: |
             cd ~/tic-strategy-app/alpaca
             git pull origin main
-            docker-compose down
-            docker-compose build
-            docker-compose up -d --force-recreate
+            docker compose down
+            docker compose build
+            docker compose up -d --force-recreate
