added sma to the docker-compose

--- a/alpaca/docker-compose.yml
+++ b/alpaca/docker-compose.yml
@@ -53,3 +53,42 @@ services:
       options:
         max-size: "10m"
         max-file: "3"
+
+  sma-monitor:
+    image: monitor
+    container_name: sma-monitor
+    env_file: ./env/sma-monitor.env
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    restart: always
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+
+  sma-orders:
+    build: ./paper-engine-orders
+    container_name: sma-orders
+    env_file: ./env/sma-orders.env
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    restart: always
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+
+  sma-strategy:
+    build: ./paper-engine-strategy
+    container_name: sma-strategy
+    env_file: ./env/sma-strategy.env
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    restart: always
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
